[package]
name = "shim"
description = """
Shim for Fortanixdsm Ignite One Time Signer plugin
"""
version = "1.0.0"
authors = [""]
license = "Apache-2.0"
repository = ""
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
keywords = ["cosmos", "ed25519", "kms", "key-management"]
edition = "2021"
rust-version = "1.56"
[[bin]]
name = "shim"
path = "src/bin/shim/main.rs"
[dependencies]
abscissa_core = "0.6"
bytes_v0_5 = { version = "0.5", package = "bytes" }
bytes = "1"
base64 = "0.13.0"
chrono = "0.4"
clap = "3"
cosmrs = "0.5"
ed25519-dalek = "1"
elliptic-curve = { version = "0.11.12", features = ["pkcs8"] }
eyre = "0.6"
getrandom = "0.2"
hkdf = "0.11"
k256 = { version = "0.10", features = ["ecdsa", "sha256"] }
once_cell = "1.5"
prost = "0.9"
prost-amino = "0.6"
prost-amino-derive = "0.6"
prost-derive = "0.9"
rand_core = { version = "0.6", features = ["std"] }
sdkms = { version = "0.4.0" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.9"
signature = { version = "1.3", features = ["std"] }
subtle = "2"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tempfile = "3"
tendermint = { version = "0.23.5", features = ["secp256k1"] }
tendermint-config = "0.23.5"
tendermint-rpc = { version = "0.23.5", optional = true, features = ["http-client"] }
tendermint-proto = "0.23.5"
tendermint-p2p = { version = "0.23.5", features = ["amino"] }
thiserror = "1"
url = { version = "2.2.2", features = ["serde"]}
uuid = { version = "0.8.2", features = ["serde"]}
wait-timeout = "0.2"
zeroize = "1"

[dev-dependencies]
abscissa_core = { version = "0.6", features = ["testing"] }
byteorder = "1"
rand = "0.7"


# Enable integer overflow checks in release builds for security reasons
[profile.release]
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
